--- a/requirements.txt
+++ b/requirements.txt
@@ -1,7 +1,9 @@
 attrs==19.3.0
+certifi==2020.4.5.1
+chardet==3.0.4
 click==7.1.2
 Flask==1.1.2
-Flask-SQLAlchemy==2.4.1
+idna==2.9
 importlib-metadata==1.6.0
 itsdangerous==1.1.0
 Jinja2==2.11.2
@@ -12,8 +14,9 @@ pluggy==0.13.1
 py==1.8.1
 pyparsing==2.4.7
 pytest==5.4.2
-six==1.14.0
-SQLAlchemy==1.3.17
+requests==2.23.0
+six==1.15.0
+urllib3==1.25.9
 wcwidth==0.1.9
 Werkzeug==1.0.1
 zipp==3.1.0
